adds main navigation

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -12,3 +12,24 @@
  */
 @import "bootstrap-sprockets"
 @import "bootstrap"
+
+$lighest_green:  #7FD7A2
+$light_green:    #3CCF76
+$green:          #2D9C59
+$dark_green:     #174F2D
+$darkest_green:  #2F4F3C
+
+$light-gray: #ccc
+
+.dropdown-menu .glyphicon
+  padding-right: 30px
+
+.container
+  margin-top: 10px
+  background-color: $light-gray
+
+.search-form
+  width: 500px
+
+.main-navigation
+  margin-top: 10px
