--- a/app/views/ui/home.html.haml
+++ b/app/views/ui/home.html.haml
@@ -1,31 +1,81 @@
 %h1.text-center Recent reviews
 .review
-  .row
+  .row.col-md-12
     %a(href='#') Toni. C
     wrote a review for
     %a(href='#') Kasca Mrlacnik
     %span.pull-right= fa_icon 'clock-o', text: '1 minute ago'
+  .row.review-stars.col-md-12
+    = fa_icon 'star'
+    = fa_icon 'star'
+    = fa_icon 'star'
+    = fa_icon 'star-o'
+    = fa_icon 'star-o'
   .row
-    .star-rating
-      %fieldset
-        %input#star5{:name => "rating", :type => "radio", :value => "5"}/
-        %label{:for => "star5", :title => "Outstanding"} 5 stars
-        %input#star4{:name => "rating", :type => "radio", :value => "4"}/
-        %label{:for => "star4", :title => "Very Good"} 4 stars
-        %input#star3{:name => "rating", :type => "radio", :value => "3"}/
-        %label{:for => "star3", :title => "Good"} 3 stars
-        %input#star2{:name => "rating", :type => "radio", :value => "2"}/
-        %label{:for => "star2", :title => "Poor"} 2 stars
-        %input#star1{:name => "rating", :type => "radio", :value => "1"}/
-        %label{:for => "star1", :title => "Very Poor"} 1 star
+    .col-md-8
+      %p Ne illud tritani malorum mel, te diam ubique appellantur cum. Meis appareat dissentias mel eu. Nemore forensibus eos ea, id habeo causae appellantur sit, delenit volutpat ne nam. Ius te duis vituperatoribus, sit id nullam regione officiis, no viderer percipit mea.
+  .row
+    .col-md-12
+      %a(href='#')= fa_icon 'share-square-o', text: 'read more'
+  %hr
 
--#
--# <div class="star-rating">
--#   <fieldset>
--#     <input type="radio" id="star5" name="rating" value="5" /><label for="star5" title="Outstanding">5 stars</label>
--#     <input type="radio" id="star4" name="rating" value="4" /><label for="star4" title="Very Good">4 stars</label>
--#     <input type="radio" id="star3" name="rating" value="3" /><label for="star3" title="Good">3 stars</label>
--#     <input type="radio" id="star2" name="rating" value="2" /><label for="star2" title="Poor">2 stars</label>
--#     <input type="radio" id="star1" name="rating" value="1" /><label for="star1" title="Very Poor">1 star</label>
--#   </fieldset>
--# </div>
+.review
+  .row.col-md-12
+    %a(href='#') Toni. C
+    wrote a review for
+    %a(href='#') Kasca Mrlacnik
+    %span.pull-right= fa_icon 'clock-o', text: '4 hours ago'
+  .row.review-stars.col-md-12
+    = fa_icon 'star'
+    = fa_icon 'star-o'
+    = fa_icon 'star-o'
+    = fa_icon 'star-o'
+    = fa_icon 'star-o'
+  .row
+    .col-md-8
+      %p Ne illud tritani malorum mel, te diam ubique appellantur cum. Meis appareat dissentias mel eu. Nemore forensibus eos ea, id habeo causae appellantur sit, delenit volutpat ne nam. Ius te duis vituperatoribus, sit id nullam regione officiis, no viderer percipit mea.
+  .row
+    .col-md-12
+      %a(href='#')= fa_icon 'share-square-o', text: 'read more'
+  %hr
+
+.review
+  .row.col-md-12
+    %a(href='#') Toni. C
+    wrote a review for
+    %a(href='#') Kasca Mrlacnik
+    %span.pull-right= fa_icon 'clock-o', text: '8 days ago'
+  .row.review-stars.col-md-12
+    = fa_icon 'star'
+    = fa_icon 'star'
+    = fa_icon 'star'
+    = fa_icon 'star'
+    = fa_icon 'star'
+  .row
+    .col-md-8
+      %p Ne illud tritani malorum mel, te diam ubique appellantur cum. Meis appareat dissentias mel eu. Nemore forensibus eos ea, id habeo causae appellantur sit, delenit volutpat ne nam. Ius te duis vituperatoribus, sit id nullam regione officiis, no viderer percipit mea.
+  .row
+    .col-md-12
+      %a(href='#')= fa_icon 'share-square-o', text: 'read more'
+  %hr
+
+.review
+  .row.col-md-12
+    %a(href='#') Toni. C
+    wrote a review for
+    %a(href='#') Kasca Mrlacnik
+    %span.pull-right= fa_icon 'clock-o', text: '10 years ago'
+  .row.review-stars.col-md-12
+    = fa_icon 'star'
+    = fa_icon 'star'
+    = fa_icon 'star'
+    = fa_icon 'star-o'
+    = fa_icon 'star-o'
+  .row
+    .col-md-8
+      %p Ne illud tritani malorum mel, te diam ubique appellantur cum. Meis appareat dissentias mel eu. Nemore forensibus eos ea, id habeo causae appellantur sit, delenit volutpat ne nam. Ius te duis vituperatoribus, sit id nullam regione officiis, no viderer percipit mea.
+  .row
+    .col-md-12
+      %a(href='#')= fa_icon 'share-square-o', text: 'read more'
+  %hr
+
