--- a/app/assets/stylesheets/stars.sass
+++ b/app/assets/stylesheets/stars.sass
@@ -1,5 +1,6 @@
-$star_color: lighten($green, 8%)
-$star_hover_color: lighten($green, 13%)
+$orange: #FF8812
+$star_color: $orange
+$star_hover_color: lighten($orange, 13%)
 
 .star-rating  
   font-family: 'FontAwesome'
