--- a/app/views/ui/home.html.haml
+++ b/app/views/ui/home.html.haml
@@ -1,10 +1,10 @@
-%h1.text-center Recent reviews
+%h1.text-center.large-heading Recent reviews
 .review
   .row.col-md-12
     %a(href='#') Toni. C
     wrote a review for
     %a(href='#') Kasca Mrlacnik
-    %span.pull-right= fa_icon 'clock-o', text: '1 minute ago'
+    %span.pull-right.time-ago= fa_icon 'clock-o', text: '1 minute ago'
   .row.review-stars.col-md-12
     = fa_icon 'star'
     = fa_icon 'star'
@@ -17,6 +17,15 @@
   .row
     .col-md-12
       %a(href='#')= fa_icon 'share-square-o', text: 'read more'
+  .row
+    .col-md-12
+      %p.light_brown Was this review?
+  .row
+    .col-md-12
+      %a(href='#' class='btn btn-info useful-funny-cool-btn')= fa_icon 'lightbulb-o', text: 'useful'
+      %a(href='#' class='btn btn-info useful-funny-cool-btn')= fa_icon 'smile-o', text: 'funny'
+      %a(href='#' class='btn btn-info useful-funny-cool-btn')= fa_icon 'empire', text: 'cool'
+
   %hr
 
 .review
@@ -24,7 +33,7 @@
     %a(href='#') Toni. C
     wrote a review for
     %a(href='#') Kasca Mrlacnik
-    %span.pull-right= fa_icon 'clock-o', text: '4 hours ago'
+    %span.pull-right.time-ago= fa_icon 'clock-o', text: '4 hours ago'
   .row.review-stars.col-md-12
     = fa_icon 'star'
     = fa_icon 'star-o'
@@ -37,6 +46,15 @@
   .row
     .col-md-12
       %a(href='#')= fa_icon 'share-square-o', text: 'read more'
+  .row
+    .col-md-12
+      %p.light_brown Was this review?
+  .row
+    .col-md-12
+      %a(href='#' class='btn btn-info useful-funny-cool-btn')= fa_icon 'lightbulb-o', text: 'useful'
+      %a(href='#' class='btn btn-info useful-funny-cool-btn')= fa_icon 'smile-o', text: 'funny'
+      %a(href='#' class='btn btn-info useful-funny-cool-btn')= fa_icon 'empire', text: 'cool'
+
   %hr
 
 .review
@@ -44,7 +62,7 @@
     %a(href='#') Toni. C
     wrote a review for
     %a(href='#') Kasca Mrlacnik
-    %span.pull-right= fa_icon 'clock-o', text: '8 days ago'
+    %span.pull-right.time-ago= fa_icon 'clock-o', text: '8 days ago'
   .row.review-stars.col-md-12
     = fa_icon 'star'
     = fa_icon 'star'
@@ -57,6 +75,15 @@
   .row
     .col-md-12
       %a(href='#')= fa_icon 'share-square-o', text: 'read more'
+  .row
+    .col-md-12
+      %p.light_brown Was this review?
+  .row
+    .col-md-12
+      %a(href='#' class='btn btn-info useful-funny-cool-btn')= fa_icon 'lightbulb-o', text: 'useful'
+      %a(href='#' class='btn btn-info useful-funny-cool-btn')= fa_icon 'smile-o', text: 'funny'
+      %a(href='#' class='btn btn-info useful-funny-cool-btn')= fa_icon 'empire', text: 'cool'
+
   %hr
 
 .review
@@ -64,7 +91,7 @@
     %a(href='#') Toni. C
     wrote a review for
     %a(href='#') Kasca Mrlacnik
-    %span.pull-right= fa_icon 'clock-o', text: '10 years ago'
+    %span.pull-right.time-ago= fa_icon 'clock-o', text: '10 years ago'
   .row.review-stars.col-md-12
     = fa_icon 'star'
     = fa_icon 'star'
@@ -77,5 +104,13 @@
   .row
     .col-md-12
       %a(href='#')= fa_icon 'share-square-o', text: 'read more'
-  %hr
+  .row
+    .col-md-12
+      %p.light_brown Was this review?
+  .row
+    .col-md-12
+      %a(href='#' class='btn btn-info useful-funny-cool-btn')= fa_icon 'lightbulb-o', text: 'useful'
+      %a(href='#' class='btn btn-info useful-funny-cool-btn')= fa_icon 'smile-o', text: 'funny'
+      %a(href='#' class='btn btn-info useful-funny-cool-btn')= fa_icon 'empire', text: 'cool'
+
 
