--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -139,3 +139,12 @@ hr
 
 .search-button, .search-button:hover
   color: $brown
+
+footer .container
+  background-color: rgba(#fff, 0.0)
+  padding-top: 120px
+  padding-bottom: 120px
+  .ruby-icon
+    font-size: 200%
+  .ruby
+    font-size: 150%
