fixes styles in navigation

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -88,13 +88,9 @@ main a
   width: 500px
 
 .main-navigation
-  margin-top: 10px
-  a:focus
-    color: #fff
-
-.main-navigation
-  margin-top: 26px
-  a:hover
+  margin-top: 16px
+  margin-bottom: 8px
+  a:hover, a:focus
     color: #fff
 
 p
