--- a/app/views/shared/_main_navigation.html.haml
+++ b/app/views/shared/_main_navigation.html.haml
@@ -44,7 +44,7 @@
           %li(role='separator' class='divider')
           %li
             %a(href='#') Log Out
-    .col-md-8.col-md-offset-2
+    .col-md-9.col-md-offset-2
       .nav.nav-pills.main-navigation
         %li(role='presentation' class='active')
           %a(href='#') Home
@@ -56,5 +56,7 @@
           %a(href='#') Find friends
         %li(role='presentation')
           %a(href='#') Messages
+        %li(role='presentation')
+          %a(href='#') About us
         %li(role='presentation')
           %a(href='#') Help
