--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -123,7 +123,7 @@ hr
 
 .logo
   position: absolute
-  top: 10px
+  top: 5px
   left: 30px
 
 .logo-subheading
@@ -133,7 +133,7 @@ hr
 .time-ago
   color: $light_brown
 
-.search-button, .search-button:hover
+.default-button, .default-button:hover
   color: $brown
 
 footer .container
@@ -144,3 +144,18 @@ footer .container
     font-size: 200%
   .ruby
     font-size: 150%
+
+.more-reviews-button
+  margin-top: 70px
+
+.welcome-text
+  width: 900px
+  padding-bottom: 30px
+  margin: 0 auto
+
+.tutorial
+  width: 164px
+  margin-bottom: 4px
+  height: 60px
+  line-height: 46px
+  margin-left: 4px
