--- a/app/views/shared/_main_navigation.html.haml
+++ b/app/views/shared/_main_navigation.html.haml
@@ -22,7 +22,7 @@
             %option Spa
             %option Hotels
             %option Health
-          %button(type='submit' class='btn btn-default search-button')
+          %button(type='submit' class='btn btn-default default-button')
             Search
     .col-md-1
       %span.dropdown.pull-right
