--- a/app/views/ui/main.html.haml
+++ b/app/views/ui/main.html.haml
@@ -1,4 +1,12 @@
-%h1.text-center.large-heading Recent reviews
+%h1.text-center.large-heading Welcome!
+%p.welcome-text People use Yelp to search for everything from the city's tastiest burger to the most renowned cardiologist. This web app is clone of the real Yelp site and was made for educational purpose. Try it out and have fun.
+.text-center
+  .btn.btn-primary.tutorial Tutorial
+  %br
+  .btn.btn-primary Sign up
+  .btn.btn-default.default-button Login
+
+%h1.text-center Recent reviews
 .review
   .row.col-md-12
     %a(href='#') Toni. C
@@ -116,4 +124,5 @@
   .row
     .text-center.more-reviews-button
       %a(href='#' class='btn btn-primary') More reviews
+
 
