adds cool hover effect on ancor tags

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -54,6 +54,7 @@ $link-hover-decoration: none
 @import "bootstrap"
 @import font-awesome
 @import 'stars'
+@import 'hover_effects'
 
 body
 
@@ -141,8 +142,9 @@ footer .container
   padding-top: 120px
   padding-bottom: 120px
   .ruby-icon
-    font-size: 200%
+    font-size: 150%
   .ruby
+    font-variant: small-caps
     font-size: 150%
 
 .more-reviews-button
@@ -159,3 +161,6 @@ footer .container
   height: 60px
   line-height: 46px
   margin-left: 4px
+
+a:hover
+  color: $green
