--- a/app/views/ui/main.html.haml
+++ b/app/views/ui/main.html.haml
@@ -9,7 +9,8 @@
 %h1.text-center Recent reviews
 .review
   .row.col-md-12
-    %a(href='#') Toni. C
+    %span.cl-effect-12
+      %a(href='#') Toni. C
     wrote a review for
     %a(href='#') Kasca Mrlacnik
     %span.pull-right.time-ago= fa_icon 'clock-o', text: '1 minute ago'
