adds about us page

--- a/app/views/ui/home.html.haml
+++ b/app/views/ui/home.html.haml
@@ -1,9 +1,11 @@
 %h1.text-center.large-heading Recent reviews
 .review
   .row.col-md-12
-    %a(href='#') Toni. C
+    %span.cl-effect-12
+      %a(href='#') Toni. C
     wrote a review for
-    %a(href='#') Kasca Mrlacnik
+    %span.cl-effect-12
+      %a(href='#') Kasca Mrlacnik
     %span.pull-right.time-ago= fa_icon 'clock-o', text: '1 minute ago'
   .row.review-stars.col-md-12
     = fa_icon 'star'
@@ -16,7 +18,8 @@
       %p Ne illud tritani malorum mel, te diam ubique appellantur cum. Meis appareat dissentias mel eu. Nemore forensibus eos ea, id habeo causae appellantur sit, delenit volutpat ne nam. Ius te duis vituperatoribus, sit id nullam regione officiis, no viderer percipit mea.
   .row
     .col-md-12
-      %a(href='#')= fa_icon 'share-square-o', text: 'read more'
+      %span.cl-effect-12
+        %a(href='#')= fa_icon 'share-square-o', text: 'read more'
   .row
     .col-md-12
       %p.light_brown Was this review?
