--- a/app/views/ui/tutorial.html.haml
+++ b/app/views/ui/tutorial.html.haml
@@ -1,4 +1,7 @@
 %h1.text-center.large-heading Tutorial
 %p 
   This app is really easy to use if you know how the real Yelp app works. If not you can watch quick video presentation on 
-  %a(href='#') Livecoding.tv. 
+  %span.cl-effect-12
+    %a(href='#') Livecoding.tv. 
+
+%br
