--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -72,6 +72,9 @@ body
   background-color: $brown
   color: #fff
 
+main .container
+  min-height: 600px
+
 main a
   color: $green
 
@@ -164,3 +167,10 @@ footer .container
 
 a:hover
   color: $green
+
+.toni-portrait
+  text-align: center
+  img
+    border-radius: 50%
+    margin-top: 40px
+    margin-bottom: 60px
