--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -174,3 +174,7 @@ a:hover
     border-radius: 50%
     margin-top: 40px
     margin-bottom: 60px
+
+.form-sign-up-log-in
+  width: 700px
+  margin: 0 auto
