adds search results page

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -178,3 +178,10 @@ a:hover
 .form-sign-up-log-in
   width: 700px
   margin: 0 auto
+
+.sum-reviews
+  padding-left: 40px
+  font-size: 0.8em
+
+.company-name
+  font-size: 2em
