--- a/app/views/ui/help.html.haml
+++ b/app/views/ui/help.html.haml
@@ -1,6 +1,7 @@
-%h1.text-center.large-heading Help
-%p.text-center
-  This app is really easy to use if you know how the real Yelp app works. If not you can watch quick video presentation on
+.text-center
+  %h1.large-heading Help
+  %p This app is really easy to use if you know how the real Yelp app works.
+  %p If not you can watch quick video presentation on
   %span.cl-effect-12
     %a(href='#')LiveCoding.com
 
