fixes styles for stars and euros

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -146,9 +146,10 @@ footer .container
   padding-top: 120px
   padding-bottom: 120px
   .ruby-icon
-    font-size: 150%
+    font-size: 186%
   .ruby
     font-variant: small-caps
+    font-weight: 800
     font-size: 150%
 
 .more-reviews-button
@@ -191,16 +192,33 @@ a:hover
 .company-stars
   margin-left: -12px
 
+.review-stars
+  font-size: 150%
+  color: $star_color
+
+.average-stars
+  font-size: 150%
+  color: $light_brown
+
 .company-reviews
   font-size: 0.8em
+  color: $light_brown
+  padding-left: 20px
 
 .eur-all
   margin-left: -12px
-  font-size: 1.4em
+  font-size: 1.5em
+
+.eur-all-search
+  margin-left: -12px
+  font-size: 1.1em
 
 .eur-full
-  color: $orange
+  color: $light_brown
 
 .eur-empty
-  color: lighten(desaturate($orange, 30%), 20%)
+  color: lighten(desaturate($light_brown, 30%), 40%)
+
+.address
+  padding-top: 30px
 
