--- a/app/assets/stylesheets/stars.sass
+++ b/app/assets/stylesheets/stars.sass
@@ -1,4 +1,3 @@
-$orange: #FF8812
 $star_color: $orange
 $star_hover_color: lighten($orange, 13%)
 
@@ -41,3 +40,7 @@ $star_hover_color: lighten($orange, 13%)
 .review-stars
   font-size: 150%
   color: $star_color
+
+.average-stars
+  font-size: 150%
+  color: $light_brown
