--- a/app/views/ui/company-show-page.html.haml
+++ b/app/views/ui/company-show-page.html.haml
@@ -5,7 +5,7 @@
       .col-md-7
         %span.cl-effect-12
           %a(href='#' class='company-name') McDonalds
-        .review-stars.col-md-12.company-stars
+        .average-stars.col-md-12.company-stars
           = fa_icon 'star'
           = fa_icon 'star'
           = fa_icon 'star'
