--- a/app/views/ui/search-results.html.haml
+++ b/app/views/ui/search-results.html.haml
@@ -4,14 +4,20 @@
     .col-md-7
       %span.cl-effect-12
         %a(href='#' class='company-name') McDonalds
-      .review-stars.col-md-12
+      .review-stars.col-md-12.company-stars.average-stars
         = fa_icon 'star'
         = fa_icon 'star'
         = fa_icon 'star'
         = fa_icon 'star-o'
         = fa_icon 'star-o'
-        %span.sum-reviews 116 Reviews
-    .col-md-5
+        %span.sum-reviews.company-reviews 116 Reviews
+        .col-md-12.eur.eur-all-search
+          = fa_icon 'eur', class: 'eur-full'
+          = fa_icon 'eur', class: 'eur-full'
+          = fa_icon 'eur', class: 'eur-full'
+          = fa_icon 'eur', class: 'eur-empty'
+          = fa_icon 'eur', class: 'eur-empty'
+    .col-md-5.address
       %div Nobelova street 34
       %div 1000 Ljubljana
       %div Slovenia
@@ -23,14 +29,20 @@
     .col-md-7
       %span.cl-effect-12
         %a(href='#' class='company-name') McDonalds
-      .review-stars.col-md-12
+      .review-stars.col-md-12.company-stars.average-stars
         = fa_icon 'star'
         = fa_icon 'star'
         = fa_icon 'star'
         = fa_icon 'star-o'
         = fa_icon 'star-o'
-        %span.sum-reviews 87 Reviews
-    .col-md-5
+        %span.sum-reviews.company-reviews 116 Reviews
+        .col-md-12.eur.eur-all-search
+          = fa_icon 'eur', class: 'eur-full'
+          = fa_icon 'eur', class: 'eur-full'
+          = fa_icon 'eur', class: 'eur-full'
+          = fa_icon 'eur', class: 'eur-empty'
+          = fa_icon 'eur', class: 'eur-empty'
+    .col-md-5.address
       %div Nobelova street 34
       %div 1000 Ljubljana
       %div Slovenia
@@ -42,14 +54,20 @@
     .col-md-7
       %span.cl-effect-12
         %a(href='#' class='company-name') McDonalds
-      .review-stars.col-md-12
+      .review-stars.col-md-12.company-stars.average-stars
         = fa_icon 'star'
         = fa_icon 'star'
         = fa_icon 'star'
         = fa_icon 'star-o'
         = fa_icon 'star-o'
-        %span.sum-reviews 7 Reviews
-    .col-md-5
+        %span.sum-reviews.company-reviews 116 Reviews
+        .col-md-12.eur.eur-all-search
+          = fa_icon 'eur', class: 'eur-full'
+          = fa_icon 'eur', class: 'eur-full'
+          = fa_icon 'eur', class: 'eur-full'
+          = fa_icon 'eur', class: 'eur-empty'
+          = fa_icon 'eur', class: 'eur-empty'
+    .col-md-5.address
       %div Nobelova street 34
       %div 1000 Ljubljana
       %div Slovenia
