midway through about me page

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -222,3 +222,23 @@ a:hover
 .address
   padding-top: 30px
 
+.nav-stacked li a
+  border: 2px solid $brown
+  color: $brown
+  margin-top: -4px
+  &:hover, &:focus
+    color: white
+
+.list-of-friends
+  margin-top: 20px
+  margin-left: 20px
+  list-style-type: none
+  a
+    font-size: 1.5em
+  i
+    font-size: 1.5em
+
+a.smaller-icon
+  font-size: 1.5em
+  color: $light_brown
+  margin-left: 20px
