--- a/app/views/ui/log-in.html.haml
+++ b/app/views/ui/log-in.html.haml
@@ -9,7 +9,7 @@
     .form-group
       %label(for='password' class='col-sm-4 control-label') Password
       .col-sm-7
-        %input(type='password' class='form-control' id='password' placeholder='Your password goes here...' autofocus)
+        %input(type='password' class='form-control' id='password' placeholder='Your password goes here...' )
     .form-group
       .col-sm-offset-4.col-sm-10
         %button(type='submit' class='btn btn-primary') Log in
