--- a/app/views/ui/company-show-page.html.haml
+++ b/app/views/ui/company-show-page.html.haml
@@ -18,7 +18,7 @@
           = fa_icon 'eur', class: 'eur-full'
           = fa_icon 'eur', class: 'eur-empty'
           = fa_icon 'eur', class: 'eur-empty'
-      .col-md-5
+      .col-md-5.address
         %div Nobelova street 34
         %div 1000 Ljubljana
         %div Slovenia
