--- a/app/views/ui/sign-up.html.haml
+++ b/app/views/ui/sign-up.html.haml
@@ -9,7 +9,7 @@
     .form-group
       %label(for='password' class='col-sm-4 control-label') Password
       .col-sm-7
-        %input(type='password' class='form-control' id='password' placeholder='Your password goes here...' autofocus)
+        %input(type='password' class='form-control' id='password' placeholder='Your password goes here...')
     .form-group
       %label(for='full_name' class='col-sm-4 control-label')
         Create account for
