finishes about me page

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -242,3 +242,21 @@ a.smaller-icon
   font-size: 1.5em
   color: $light_brown
   margin-left: 20px
+  &:hover
+    color: $green
+
+.category-icon
+  color: $light_brown
+  padding-left: 20px
+
+.list-of-categories
+  font-size: 1.5em
+
+.list-of-flags
+  font-size: 1.2em
+  li
+    border-bottom: 1px solid $brown
+    padding: 20px 0
+  li:last-child
+    border-bottom: none
+
