adds changes to edit review my company and my reviews page

--- a/app/views/ui/about-me-my-reviews.html.haml
+++ b/app/views/ui/about-me-my-reviews.html.haml
@@ -18,7 +18,6 @@
       %li(role='presentation')
         %a(href='#') Flags
   .col-md-9
-    -# DELETE ME
     .review
       .row.col-md-12
         %span.cl-effect-12
@@ -40,6 +39,8 @@
         .col-md-12
           %span.cl-effect-12
             %a(href='#')= fa_icon 'share-square-o', text: 'read more'
+      %br
+      %a(href='#' class='btn btn-default default-button') Edit Review
       %hr
 
     .review
@@ -63,6 +64,8 @@
         .col-md-12
           %span.cl-effect-12
             %a(href='#')= fa_icon 'share-square-o', text: 'read more'
+      %br
+      %a(href='#' class='btn btn-default default-button') Edit Review
       %hr
 
     .review
